# Crypto_coursework

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  README.md  REQUIREMENTS.md  REVIEW_REPORT.md
examples/: demo_cli.cpp
include/: crypto.hpp
include/crypto/: crypto_manager.hpp
include/crypto/algorithms/deal/: deal.hpp
include/crypto/algorithms/des/: des.hpp  des_constants.hpp  triple_des.hpp
include/crypto/algorithms/diffie_hellman/: diffie_hellman.hpp
include/crypto/algorithms/rc4/: rc4.hpp
include/crypto/algorithms/rijndael/: aes_constants.hpp  galois_field.hpp  polynomials.hpp  rijndael.hpp
include/crypto/algorithms/rsa/: big_integer.hpp  rsa.hpp  rsa_key.hpp  rsa_keygen.hpp  wiener_attack.hpp
include/crypto/algorithms/serpent/: serpent.hpp
include/crypto/ciphers/: asymmetric_cipher.hpp  block_cipher.hpp  cipher.hpp  stream_cipher.hpp
include/crypto/core/: endianness.hpp  exceptions.hpp  types.hpp  utils.hpp
include/crypto/io/: async_processor.hpp  file_encryptor.hpp
include/crypto/math/: continued_fraction.hpp  modinv.hpp  prime.hpp  random.hpp
include/crypto/modes/: asymmetric_cipher_mode.hpp  cbc.hpp  cfb.hpp  ctr.hpp  ecb.hpp  mode.hpp  ofb.hpp  pcbc.hpp  random_delta.hpp  stream_cipher_mode.hpp
include/crypto/padding/: padding.hpp
src/: crypto_manager.cpp
src/algorithms/deal/: deal.cpp
src/algorithms/des/: des.cpp  triple_des.cpp
src/algorithms/diffie_hellman/: diffie_hellman.cpp
src/algorithms/rc4/: rc4.cpp
src/algorithms/rijndael/: aes_constants.cpp  galois_field.cpp  polynomials.cpp  rijndael.cpp
src/algorithms/rsa/: big_integer.cpp  rsa.cpp  rsa_keygen.cpp  wiener_attack.cpp
src/algorithms/serpent/: serpent.cpp
src/core/: endianness.cpp  exceptions.cpp  types.cpp  utils.cpp
src/io/: async_processor.cpp  file_encryptor.cpp
src/math/: continued_fraction.cpp  modinv.cpp  prime.cpp  random.cpp
src/modes/: asymmetric_cipher_mode.cpp  cbc.cpp  cfb.cpp  ctr.cpp  ecb.cpp  mode_factory.cpp  ofb.cpp  pcbc.cpp  random_delta.cpp  stream_cipher_mode.cpp
src/padding/: ansix923.cpp  iso10126.cpp  pkcs7.cpp  zeros.cpp
tests/: README.md  run_all_tests.cpp  test_common.cpp  test_common.hpp
tests/integration_tests/: test_file_encryption.cpp
tests/unit_tests/: test_aes.cpp  test_crypto_manager.cpp  test_deal.cpp  test_des.cpp  test_modes.cpp  test_padding.cpp  test_rsa.cpp
